note that the l3keys "example" is broken
I don’t actually think we need the examples folder in the repository
any more!

(this is kind of a test commit for subgit)

--- a/examples/l3keys.tex
+++ b/examples/l3keys.tex
@@ -1,3 +1,6 @@
+
+%% NB: this file needs updating and does not work with the current version of expl3!
+
 \documentclass{article}
 \usepackage[T1]{fontenc}
 \usepackage{expl3,lmodern,xparse}
