l3auxdata: couple comments
(actually this is another subgit commit test)

--- a/l3trial/l3auxdata/l3auxdata.dtx
+++ b/l3trial/l3auxdata/l3auxdata.dtx
@@ -99,6 +99,20 @@ Do not distribute a modified version of this file.
 \clearpage
 \part{Documentation}
 
+\section{Roadmap}
+
+\begin{itemize}
+  \item
+  This package was written hastily in preparation for TUG2014.
+  It still needs work.
+  \item
+  More writing/reading algorithms need to be written to benchmark the `best' solution.
+  \item
+  A mode for using the regular \verb|.aux| file is necessary!
+  \item
+  Perhaps a proper data-structure is needed after all rather than relying on the programmer to come up with their own ideas for what and how to read and write.
+\end{itemize}
+
 \section{Auxiliary data}
 
 Every \LaTeX{} user is aware of the way that multiple compilations are necessary to resolve tables of contents, cross-references, bibliographies, and so on.
