Remove unneeded \exp_not:N when expanding registers
Expandable commands should not reach the internals of
fp expression parsing.  In case they do (e.g. due to
\protect), they now trigger a relevant error (thanks
to some commits a few days ago), and they don't go
through that particular branch of the code, where
\exp_not:N is thus not necessary.

--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -854,7 +854,7 @@
       {
         \exp_after:wN \use:nn
         \exp_after:wN \@@_parse_one_register_auxii:wwwNw
-        \exp_after:wN { \tex_the:D \exp_not:N #1 }
+        \exp_after:wN { \tex_the:D #1 }
           ; \@@_parse_one_register_dim:ww
           PT ; \@@_parse_one_register_mu:www
           . PT ; \@@_parse_one_register_int:www
