Fix big integer addition (it added together mismatched parts of numbers)
It is complicated to describe the bug. The code splits both numbers in 
blocks of 8 digits, organized into two binary trees, then corresponding 
blocks of digits are brought close together in the input stream, and 
summed.  Schematically, a 64-digit number with blocks ABCDEFGH becomes a 
tree {{AB}{CD}}{{EF}{GH}}.  A 48-digit number IJKLMN used to become 
{IJ}{{KL}{MN}}, and ABCDEFGH + IJKLMN thus did the following: the 
addition was split into {AB}{CD}+IJ and {EF}{GH}+{KL}{MN}, then the 
first calculation was split as {AB}+I and {CD}+J.  This is obviously 
wrong.  Now essentially there is an extra pair of braces around IJ so 
that {AB}{CD}+{IJ} becomes {AB}+0 and {CD}+{IJ}.

I have an implementation of Karatsuba's multiplication algorithm, but
so far it only covers cases where the number of digits is a power of 2.
Expect a commit tomorrow when I'm done.

--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -1517,8 +1517,23 @@
 % \begin{macro}[int]{\@@_tree_dp:n}
 %   Receives a (non-zero) multiple of $8$ digits, such that the first
 %   block of $8$ digits is non-zero.  Outputs \meta{depth}.\meta{tree}
-%   where a \meta{tree} is \cs{@@:n} \{ \meta{tree_1} \meta{tree_2} \}
-%   or \cs{@@:n} \{ \cs{@@:w} \meta{8~digits} \}.
+%   where a \meta{tree} is
+%   \begin{itemize}
+%     \item 0\Arg{tree}\Arg{tree}
+%     \item 1\meta{tree}
+%     \item 2\meta{8~digits}
+%   \end{itemize}
+%   where the |1| are positioned such that the \meta{tree} has constant depth: always the same number of steps |0|/|1|/|2| before reaching digits.
+%   Examples:{\small
+% \begin{verbatim}
+% 200080008
+% 0{200070007}{200080008}
+% 0{1200060006}{0{200070007}{200080008}}
+% 0{0{200050005}{200060006}}{0{200070007}{200080008}}
+% 0{11200040004}{0{0{200050005}{200060006}}{0{200070007}{200080008}}}
+% 0{10{200030003}{200040004}}{0{0{200050005}{200060006}}{0{200070007}{200080008}}}
+% \end{verbatim}
+%}
 %    \begin{macrocode}
 \cs_new_nopar:Npn \@@_tree_dp:n % expects "{<digits>}" (non-zero multiple of 8 digits, first block non-zero), outputs "<depth>.<tree>"
   {
@@ -1538,23 +1553,23 @@
     \@@_tree_auxi:NNNNNNNN
   }
 \cs_new:Npn \@@_tree_auxi_end:w #1 ;
-  { ; \@@_tree_extend:nnw \q_stop ; }
+  { ; \@@_tree_extend:nnw ; \q_stop ; }
 \cs_new:Npn \@@_tree_push:wN 1 #1 ; #2
   {
     #2
       { \@@_tree_loop:nwN { ; \use_ii:nn } }
       { ; \use_i:nn }
-    \@@:n { \@@:w #1 }
+    { 2 #1 } % tree stuff
   }
 \cs_new:Npn \@@_tree_loop:nwN #1 #2 ; #3
   {
     #3
       { \@@_tree_loop:nwN { #1 ; \use_ii:nn } }
       { #1 ; \use_i:nn }
-    \@@:n {#2}
+    { 0 #2 } % tree stuff
   }
 \cs_new:Npn \@@_tree_extend:nnw #1 #2 #3 \q_stop
-  { #2 #3 ; \@@_tree_extend:nnw \q_stop }
+  { #2 #3 \@@_tree_extend:nnw ; \q_stop }
 \cs_new:Npn \@@_tree_collect:w ; #1 #2 ; #3
   {
     + \c_one
@@ -1562,13 +1577,10 @@
       \exp_after:wN \@@_tree_power:w
     \fi:
     #1
-      { \@@_tree_collect_aux:w #2 }
-      { \@@_tree_collect:w } ; #3
+      { \@@_tree_collect_aux:w 1 }
+      { \@@_tree_collect:w } #2 ; #3
   }
-\cs_new:Npn \@@_tree_power:w #1#2#3 ;
-  { \@@_tree_power_aux:w #2 }
-\cs_new:Npn \@@_tree_power_aux:w #1#2 \@@_tree_extend:nnw \q_stop ;
-  { . #2 }
+\cs_new:Npn \@@_tree_power:w #1#2#3#4 ; #5 \q_stop ; { . #4 }
 \cs_new:Npn \@@_tree_collect_aux:w #1 ; #2 #3 ;
   {
     + \c_one
@@ -1576,41 +1588,43 @@
       \exp_after:wN \@@_tree_end:w
     \fi:
     #2
-      { \@@_tree_collect_aux:w \@@:n }
-      { \@@_tree_collect_aux:w }
-    { #1 #3 } ;
+      { \@@_tree_collect_aux:w 0 {#1} {#3} } % tree stuff
+      { \@@_tree_collect_aux:w 1 #1 } % tree stuff
+    ;
   }
-\cs_new:Npn \@@_tree_end:w #1#2#3#4 ; { \@@_tree_end_aux:w #4 }
-\cs_new:Npn \@@_tree_end_aux:w #1 \q_stop { . #1 }
+\cs_new:Npn \@@_tree_end:w #1#2#3 ; \q_stop ; { \use_i:nnn . #3 }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}[int]{\@@_diff_sign_auxii:w}
-%   Expects \meta{tree_1} |;| \meta{tree_2} |;| and must be used in
+%   Expects \meta{tree_1} |;| \meta{tree_2} |;| of identical number of
+%   leaves (hence identical structure), and must be used in
 %   \cs{if_case:w}.  Takes case~$0$ if the numbers are equal, case~$1$
 %   if \meta{tree_1} is bigger, and case~$-1$ if it is smaller, than
 %   \meta{tree_2}.
 %    \begin{macrocode}
-\cs_new:Npn \@@_diff_sign_auxii:w \@@:n #1 ; \@@:n #2 ;
+\cs_new:Npn \@@_diff_sign_auxii:w #1 ; #2 ;
   { \@@_diff_sign_auxiii:w #1 ; #2 ; \c_zero }
 \cs_new:Npn \@@_diff_sign_auxiii:w #1
   {
-    \if_meaning:w \@@:w #1
-      \exp_after:wN \@@_diff_sign_ww:w
-    \else:
-      \exp_after:wN \@@_diff_sign_nn:w
+    \if_case:w #1 \exp_stop_f:
+           \exp_after:wN \@@_diff_sign_z:w
+    \or:   \exp_after:wN \@@_diff_sign_i:w
+    \else: \exp_after:wN \@@_diff_sign_ii:w
     \fi:
     #1
   }
-\cs_new:Npn \@@_diff_sign_ww:w \@@:w #1 ; \@@:w #2 ;
-  {
-    \if_int_compare:w #1 < #2 \c_minus_one \fi:
-    \if_int_compare:w #1 > #2 \c_one \fi:
-  }
-\cs_new:Npn \@@_diff_sign_nn:w \@@:n #1 \@@:n #2 ; \@@:n #3 \@@:n #4 ;
+\cs_new:Npn \@@_diff_sign_z:w 0 #1 #2 ; 0 #3 #4
   {
     \@@_diff_sign_auxiii:w #1 ; #3 ;
     \@@_diff_sign_auxiii:w #2 ; #4 ;
+  }
+\cs_new:Npn \@@_diff_sign_i:w 1 #1 ; 1
+  { \@@_diff_sign_auxiii:w #1 ; }
+\cs_new:Npn \@@_diff_sign_ii:w 2 #1 ; 2 #2 ;
+  {
+    \if_int_compare:w #1 < #2 \c_minus_one \fi:
+    \if_int_compare:w #1 > #2 \c_one \fi:
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1618,6 +1632,7 @@
 % \subsection{Addition and subtraction}
 %
 % \begin{variable}[int, EXP]{\c_@@_carry_int, \@@_carry:N, \@@:n, \@@:w}
+%   ^^A todo: these should be renamed.
 %    \begin{macrocode}
 \int_const:Nn \c_@@_carry_int { 2 0000 0000 }
 \cs_new_protected:Npn \@@_carry:N #1
@@ -1626,7 +1641,7 @@
     \@@_int_eval_end:
   }
 \cs_new_protected:Npn \@@:n #1 {#1}
-\cs_new_protected:Npn \@@:w
+\cs_new_protected_nopar:Npn \@@:w
   {
     \exp_after:wN \@@_carry:N
     \@@_int_value:w \@@_int_eval:w \c_@@_carry_int + % todo?: replace "\c_@@_carry_int +" by "1"
@@ -1741,38 +1756,57 @@
     \fi:
     . #1 #2#3#4#5#6#7#8#9
   }
-\cs_new:Npn \@@_add_unwrap:w #1 \q_mark \@@:n #2 ;
-  { \@@_add_unwrap_aux:w #1 \q_mark #2 ; }
-\cs_new:Npn \@@_add_unwrap_aux:w #1 \q_mark \@@:n #2 #3 ;
-  { #2 #1 \q_mark #3 ; }
-\cs_new:Npn \@@_add_auxv:Nw #1 \q_mark \@@:n #2 ; \@@:n #3 ;
+\cs_new:Npn \@@_add_unwrap:w #1 \q_mark 0 #2 #3 ;
+  {
+    \@@_add_skip:w #2
+    #1 \q_mark #3 ;
+  }
+\cs_new:Npn \@@_add_skip:w #1
+  {
+    \if_case:w #1 \exp_stop_f:
+           \exp_after:wN \@@_add_skip_z:nn
+    \or:   \exp_after:wN \@@_add_skip:w
+    \else: \exp_after:wN \@@:w
+    \fi:
+  }
+\cs_new:Npn \@@_add_skip_z:nn #1#2
+  { \@@_add_skip:w #1 \@@_add_skip:w #2 }
+\cs_new:Npn \@@_add_auxv:Nw #1 \q_mark #2 ; #3 ;
   { \@@_add_auxvi:Nw #1 #3 ; #2 ; } % now the smallest tree is in front.
 \cs_new:Npn \@@_add_auxvi:Nw #1#2
   {
-    \if_meaning:w \@@:w #2
-      \exp_after:wN \@@_add_auxvii:Nw
-    \else:
-      \exp_after:wN \@@_add_nn:Nw
+    \if_case:w #2 \exp_stop_f:
+           \exp_after:wN \@@_add_auxviz:w
+    \or:   \exp_after:wN \@@_add_auxvii:w
+    \else: \exp_after:wN \@@_add_auxvin:w
     \fi:
     #1 #2
   }
-\cs_new:Npn \@@_add_nn:Nw #1 \@@:n #2 \@@:n #3 ; \@@:n #4 \@@:n #5 ;
+\cs_new:Npn \@@_add_auxviz:w #1 0 #2 #3 ; 0 #4 #5 ;
   {
     \@@_add_auxvi:Nw #1 #2 ; #4 ;
     \@@_add_auxvi:Nw #1 #3 ; #5 ;
   }
-\cs_new:Npn \@@_add_auxvii:Nw #1 \@@:w #2 ; #3
+\cs_new:Npn \@@_add_auxvii:w #1 1 #2 ; #3
   {
-    \if_meaning:w \@@:w #3
-      \exp_after:wN \@@_add_ww:Nw
+    \if_case:w #3 \exp_stop_f:
+      \exp_after:wN \@@_add_auxviiz:w
     \else:
-      \exp_after:wN \@@_add_wn:Nw
+      \exp_after:wN \@@_add_auxviii:w
     \fi:
-    #1 \@@:w #2 ; #3
+    #1 1 #2 ; #3
   }
-\cs_new:Npn \@@_add_ww:Nw #1 \@@:w #2 ; \@@:w #3 ; { \@@:w #3 #1 #2 } % big (+/-) small
-\cs_new:Npn \@@_add_wn:Nw #1 \@@:w #2 ; \@@:n #3 \@@:n #4 ;
-  { #3 \@@_add_auxvii:Nw #1 \@@:w #2 ; #4 ; }
+\cs_new:Npn \@@_add_auxviiz:w #1 1 #2 ; 0 #3 #4 ;
+  {
+    \@@_add_skip:w #3
+    \@@_add_auxvi:Nw #1 #2 ; #4 ;
+  }
+\cs_new:Npn \@@_add_auxviii:w #1 1 #2 ; 1 #3 ;
+  { \@@_add_auxvi:Nw #1 #2 ; #3 ; }
+\cs_new:Npn \@@_add_auxvin:w #1 2 #2 ; 2 #3 ;
+  {
+    \@@:w #3 #1 #2 % big (+|-) small
+  }
 %    \end{macrocode}
 % \end{macro}
 %
