Bunch of doc updates to drop spurious index entries. Added a module name analysis to expl3-datatype-analysis.xlsx

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -606,7 +606,7 @@
 %     \prop_map_tokens:Nn \l_my_prop { \str_if_eq:nnT { mykey } }
 %   \end{verbatim}
 %   will expand to the value corresponding to \texttt{mykey}: for each
-%   pair in \cs{l_my_prop} the function \cs{str_if_eq:nnT} receives
+%   pair in |\l_my_prop| the function \cs{str_if_eq:nnT} receives
 %   \texttt{mykey}, the \meta{key} and the \meta{value} as its three
 %   arguments.  For that specific task, \cs{prop_item:Nn} is faster.
 % \end{function}
