--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -80,7 +80,7 @@
 %   \clist_put_left:Nn \l_my_clist { ~ a ~ , ~ {b} ~ }
 %   \clist_put_right:Nn \l_my_clist { ~ { c ~ } , d }
 % \end{verbatim}
-% results in \cs{l_my_clist} containing |a,{b},{c~},d|.
+% results in |\l_my_clist| containing |a,{b},{c~},d|.
 % Comma lists cannot contain empty items, thus
 % \begin{verbatim}
 %   \clist_clear_new:N \l_my_clist
@@ -425,7 +425,7 @@
 %   \begin{syntax}
 %     \cs{clist_map_break:}
 %   \end{syntax}
-%   Used to terminate a \cs{clist_map_\ldots} function before all
+%   Used to terminate a |\clist_map_...| function before all
 %   entries in the \meta{comma list} have been processed. This will
 %   normally take place within a conditional statement, for example
 %   \begin{verbatim}
@@ -438,7 +438,7 @@
 %           }
 %       }
 %   \end{verbatim}
-%   Use outside of a \cs{clist_map_\ldots} scenario will lead to low
+%   Use outside of a |\clist_map_...| scenario will lead to low
 %   level \TeX{} errors.
 %   \begin{texnote}
 %     When the mapping is broken, additional tokens may be inserted by the
@@ -452,7 +452,7 @@
 %   \begin{syntax}
 %     \cs{clist_map_break:n} \Arg{tokens}
 %   \end{syntax}
-%   Used to terminate a \cs{clist_map_\ldots} function before all
+%   Used to terminate a |\clist_map_...| function before all
 %   entries in the \meta{comma list} have been processed, inserting
 %   the \meta{tokens} after the mapping has ended. This will
 %   normally take place within a conditional statement, for example
@@ -466,7 +466,7 @@
 %           }
 %       }
 %   \end{verbatim}
-%   Use outside of a \cs{clist_map_\ldots} scenario will lead to low
+%   Use outside of a |\clist_map_...| scenario will lead to low
 %   level \TeX{} errors.
 %   \begin{texnote}
 %     When the mapping is broken, additional tokens may be inserted by the
