--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -282,7 +282,7 @@ Do not distribute a modified version of this file.
 %   \end{syntax}
 %   These commands are provided to typeset control sequences.
 %   |\cmd\foo| produces \enquote{\cmd\foo} and |\cs{foo}| produces the
-%   same (\enquote{\cs{foo}}).  In general, \cs{cs} is more robust since
+%   same (\enquote{\texttt{\string\foo|}}).  In general, \cs{cs} is more robust since
 %   it doesn't rely on catcodes being \enquote{correct} and is therefore
 %   recommended.
 %
