--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -134,7 +134,7 @@
 %       \l_mymodule_tmp_tl .code:n = code
 %     }
 % \end{verbatim}
-% will create a key called \cs{l_mymodule_tmp_tl}, and not one called
+% will create a key called |\l_mymodule_tmp_tl|, and not one called
 % \texttt{key}.
 %
 % \section{Creating keys}
