--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -98,11 +98,11 @@
 % and what it looks like.
 %
 % For instance, \cs{if:w}, \cs{if_charcode:w}, and \cs{tex_if:D} are
-% three for the same internal operation of \TeX{}, namely the primitive
+% three names for the same internal operation of \TeX{}, namely the primitive
 % testing the next two characters for equality of their character code.
 % They behave identically in many situations. However, \TeX{}
 % distinguishes them when searching for a delimited argument. Namely, the
-% example function \cs{show_until_if:w} defined below will take everything
+% example function |\show_until_if:w| defined below will take everything
 % until \cs{if:w} as an argument, despite the presence of other copies of
 % \cs{if:w} under different names.
 % \begin{verbatim}
