--- a/l3kernel/source3body.tex
+++ b/l3kernel/source3body.tex
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: source3body.tex Copyright (C) 1990-2012,2014,2015 The LaTeX3 Project
+%% File: source3body.tex Copyright (C) 1990-2015 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -136,7 +136,7 @@ Thus apart from a small number of very basic functions, all \pkg{expl3}
 function names contain at least one underscore to divide the module
 name from the descriptive name of the function. For example, all
 functions concerned with comma lists are in module \texttt{clist} and
-begin \cs{clist_}.
+begin |\clist_|.
 
 Every function must include an argument specifier. For functions which
 take no arguments, this will be blank and the function name will end
@@ -154,16 +154,16 @@ following argument specifiers:
     all will be well.
   \item[\texttt{c}] This means \emph{csname}, and indicates that the
     argument will be turned into a csname before being used. So
-    \cs{foo:c} |{ArgumentOne}| will act in the same way as \cs{foo:N}
-    \cs{ArgumentOne}.
+    |\foo:c| |{ArgumentOne}| will act in the same way as |\foo:N|
+    |\ArgumentOne|.
   \item[\texttt{V} and \texttt{v}] These mean \emph{value
     of variable}. The \texttt{V} and \texttt{v} specifiers are used to
     get the content of a variable without needing to worry about the
     underlying \TeX{} structure containing the data. A \texttt{V}
     argument will be a single token (similar to \texttt{N}), for example
-    \cs{foo:V} \cs{MyVariable}; on the other hand, using \texttt{v} a
+    |\foo:V| |\MyVariable|; on the other hand, using \texttt{v} a
     csname is constructed first, and then the value is recovered, for
-    example \cs{foo:v} |{MyVariable}|.
+    example |\foo:v| |{MyVariable}|.
   \item[\texttt{o}] This means \emph{expansion once}. In general, the
     \texttt{V} and \texttt{v} specifiers are favoured over \texttt{o}
     for recovering stored information. However, \texttt{o} is useful
@@ -201,8 +201,8 @@ following argument specifiers:
 \end{description}
 Notice that the argument specifier describes how the argument is
 processed prior to being passed to the underlying function. For example,
-\cs{foo:c} will take its argument, convert it to a control sequence and
-pass it to \cs{foo:N}.
+|\foo:c| will take its argument, convert it to a control sequence and
+pass it to |\foo:N|.
 
 Variables are named in a similar manner to functions, but begin with
 a single letter to define the type of variable:
@@ -220,7 +220,7 @@ function, typically starting with the module\footnote{The module names are
   \cs{l_tmpb_int}, and so on. In such a case adding the module name up front
   to denote the module
   and in the back to indicate the type, as in
-  \cs{l_int_tmpa_int} would be very unreadable.}  name
+  \texttt{\string\l_int_tmpa_int} would be very unreadable.}  name
 and then a descriptive part.
 Variables end with a short identifier to show the variable type:
 \begin{description}
@@ -281,7 +281,7 @@ Each group of related functions is given in a box. For a function with
 a \enquote{user} name, this might read:
 \begin{function}[no-label]{\ExplSyntaxOn, \ExplSyntaxOff}
   \begin{syntax}
-    \cs{ExplSyntaxOn} \dots{} \cs{ExplSyntaxOff}
+    |\ExplSyntaxOn| \dots{} |\ExplSyntaxOff|
   \end{syntax}
   The textual description of how the function works would appear here. The
   syntax of the function is shown in mono-spaced text to the right of
@@ -297,12 +297,12 @@ show this more clearly. They will carry out the same function but will take
 different types of argument:
 \begin{function}[no-label]{\seq_new:N, \seq_new:c}
   \begin{syntax}
-    \cs{seq_new:N} \meta{sequence}
+    |\seq_new:N| \meta{sequence}
   \end{syntax}
   When a number of variants are described, the arguments are usually
   illustrated only for the base function. Here, \meta{sequence} indicates
-  that \cs{seq_new:N} expects the name of a sequence. From the argument
-  specifier, \cs{seq_new:c} also expects a sequence name, but as a
+  that |\seq_new:N| expects the name of a sequence. From the argument
+  specifier, |\seq_new:c| also expects a sequence name, but as a
   name rather than as a control sequence. Each argument given in the
   illustration should be described in the following text.
 \end{function}
@@ -316,7 +316,7 @@ These fully expandable functions are indicated in the documentation by
 a star:
 \begin{function}[EXP,no-label]{\cs_to_str:N}
   \begin{syntax}
-    \cs{cs_to_str:N} \meta{cs}
+    |\cs_to_str:N| \meta{cs}
   \end{syntax}
   As with other functions, some text should follow which explains how
   the function works. Usually, only the star will indicate that the
@@ -330,7 +330,7 @@ an \texttt{f}-type argument. In this case a hollow star is used to indicate
 this:
 \begin{function}[rEXP,no-label]{\seq_map_function:NN}
   \begin{syntax}
-    \cs{seq_map_function:NN} \meta{seq} \meta{function}
+    |\seq_map_function:NN| \meta{seq} \meta{function}
   \end{syntax}
 \end{function}
 
@@ -344,11 +344,11 @@ which outcome the conditional is being used to test. To indicate this
 without repetition, this information is given in a shortened form:
 \begin{function}[EXP,TF,no-label]{\xetex_if_engine:}
   \begin{syntax}
-    \cs{xetex_if_engine:TF} \Arg{true code} \Arg{false code}
+    |\xetex_if_engine:TF| \Arg{true code} \Arg{false code}
   \end{syntax}
   The underlining and italic of \texttt{TF} indicates that
-  \cs{xetex_if_engine:T}, \cs{xetex_if_engine:F} and
-  \cs{xetex_if_engine:TF} are all available. Usually, the illustration
+  |\xetex_if_engine:T|, |\xetex_if_engine:F| and
+  |\xetex_if_engine:TF| are all available. Usually, the illustration
   will use the \texttt{TF} variant, and so both \meta{true code}
   and \meta{false code} will be shown. The two variant forms \texttt{T} and
   \texttt{F} take only \meta{true code} and \meta{false code}, respectively.
@@ -368,13 +368,13 @@ In these cases, the text will include an extra \enquote{\textbf{\TeX{}hackers
 note}} section:
 \begin{function}[EXP,no-label]{\token_to_str:N}
   \begin{syntax}
-    \cs{token_to_str:N} \meta{token}
+    |\token_to_str:N| \meta{token}
   \end{syntax}
   The normal description text.
   \begin{texnote}
     Detail for the experienced \TeX{} or \LaTeXe\ programmer. In this
     case, it would point out that this function is the \TeX{} primitive
-    \cs{string}.
+    |\string|.
   \end{texnote}
 \end{function}
 
