--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -2011,38 +2011,34 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% ^^A todo: make <carry> args of \@@_tmul_o:w be always "0 ."
-% ^^A todo: simplify auxiliaries as appropriate.
 % \begin{macro}[int, EXP]{\@@_tmul_o:w}
-%   assume |depth(tree_1) = depth(tree_2)|, achieved in rest of code by
-%   adding leading |1|.  Given |(0|-1) . <tree> ; (0|-1) . <tree> ;|
-%   produces the product as |(0|-1) . <tree>;| The resulting tree has
+%   Assume |depth(tree_1) = depth(tree_2)|, achieved in rest of code by
+%   adding leading |1|.  Given |0.|\meta{tree}|;| |0.|\meta{tree}|;|
+%   produces the product as |0.|\meta{tree}|;| The resulting tree has
 %   |depth = 1+depth(tree_1)|, thus can have the form |0{...}{...}| or
-%   |1...|.
+%   |1...| but not |2...|.
 %    \begin{macrocode}
-\cs_new:Npn \@@_tmul_o:w #1 . #2 #3 . #4 % #5 ; % <carry> . <tree>  ; <carry> . <tree> ;
+\cs_new:Npn \@@_tmul_o:w 0 . #1 #2 ; 0 . #3
   {
-    \if_case:w #4 \if_meaning:w 1 #2 3 \fi: \exp_stop_f:
+    \if_case:w #3 \if_meaning:w 1 #1 3 \fi: \exp_stop_f:
             \exp_after:wN \@@_tmul_pp_o:w
     \or:    \exp_after:wN \@@_tmul_pt_o:w
     \or:    \exp_after:wN \@@_tmul_dd_o:w
     \or:    \exp_after:wN \@@_tmul_tp_o:w
     \else:  \exp_after:wN \@@_tmul_tt_o:w
     \fi:
-    #1 . #2 #3 . #4
+    0 . #1 #2 ; 0 . #3
   }
-\cs_new:Npn \@@_tmul_dd_o:w #1 . 2 #2#3#4#5 #6 ;
-  { \@@_tmul_dd_aux_o:w #1 . #2#3#4#5 . #6 ; }
-\cs_new:Npn \@@_tmul_dd_aux_o:w #1 . #2 . #3 ; #4 .2 #5#6#7#8 #9 ; % <5 digits> . <4 digits> ; <digit> .2 <8 digits> ;
+\cs_new:Npn \@@_tmul_dd_o:w 0 . 2 #1#2#3#4 #5 ; 0 . 2
+  { \@@_tmul_dd_aux_o:w #1#2#3#4 . #5 ; }
+\cs_new:Npn \@@_tmul_dd_aux_o:w #1 . #2 ; #3#4#5#6 #7 ;
   {
     \exp_after:wN \@@_tmul_dd_last:Nwww
-    \@@_int_value:w \@@_int_eval:w \c_@@_middle_int
-      + ( #1 0000 + #2 ) * ( #4 0000 + #5#6#7#8 )
+    \@@_int_value:w \@@_int_eval:w \c_@@_middle_int + #1 * #3#4#5#6
       \exp_after:wN \@@_tmul_dd_next:NNNNN
-      \@@_int_value:w \@@_int_eval:w \c_@@_middle_int
-        + #3 * ( #4 0000 + #5#6#7#8 ) + ( #10000 + #2) * #9
+      \@@_int_value:w \@@_int_eval:w \c_@@_middle_int + #2 * #3#4#5#6 + #1 * #7
         \exp_after:wN \@@_tmul_dd_next:NNNNN
-        \@@_int_value:w \@@_int_eval:w \c_@@_trailing_int + #3 * #9
+        \@@_int_value:w \@@_int_eval:w \c_@@_trailing_int + #2 * #7
           \exp_after:wN ;
   }
 \cs_new:Npn \@@_tmul_dd_next:NNNNN #1#2#3#4#5 { + #1#2#3#4#5 . }
@@ -2051,49 +2047,49 @@
     \@@_int_value:w \@@_int_eval:w #1 - \c_@@_leading_int .
     0 { 2 #2 } { 2 #3 #4 } ;
   }
-\cs_new:Npn \@@_tmul_tt_o:w #1 . 1 #2 ; #3 . 1 % #4 ;
+\cs_new:Npn \@@_tmul_tt_o:w 0 . 1 #1 ; 0 . 1 % #2 ;
   {
     \exp_after:wN \@@_topen_one:w
-    \@@_int_value:w \@@_tmul_o:w #1 . #2 ; #3 . % #4 ;
+    \@@_int_value:w \@@_tmul_o:w 0 . #1 ; 0 . % #2 ;
   }
-\cs_new:Npn \@@_tmul_pt_o:w #1 . 0 #2 #3 ; #4 . 1 #5 ;
+\cs_new:Npn \@@_tmul_pt_o:w 0 . 0 #1 #2 ; 0 . 1 #3 ;
   {
     \exp_after:wN \@@_tmul_tp_aux:w
-    \@@_int_value:w \@@_tmul_o:w #1 . #2 ; #4 . #5 ;
-    \@@_int_value:w \@@_tmul_o:w  0 . #3 ; #4 . #5 ;
+    \@@_int_value:w \@@_tmul_o:w 0 . #1 ; 0 . #3 ;
+    \@@_int_value:w \@@_tmul_o:w 0 . #2 ; 0 . #3 ;
   }
-\cs_new:Npn \@@_tmul_tp_o:w #1 . 1 #2 ; #3 . 0 #4 #5 ;
+\cs_new:Npn \@@_tmul_tp_o:w 0 . 1 #1 ; 0 . 0 #2 #3 ;
   {
     \exp_after:wN \@@_tmul_tp_aux:w
-    \@@_int_value:w \@@_tmul_o:w #1 . #2 ; #3 . #4 ;
-    \@@_int_value:w \@@_tmul_o:w #1 . #2 ;  0 . #5 ;
+    \@@_int_value:w \@@_tmul_o:w 0 . #1 ; 0 . #2 ;
+    \@@_int_value:w \@@_tmul_o:w 0 . #1 ; 0 . #3 ;
   }
-\cs_new:Npn \@@_tmul_tp_aux:w #1 . #2 % the second tree is necessarily 0{}{}!
+\cs_new:Npn \@@_tmul_tp_aux:w 0 . #1 % the second tree is necessarily 0{}{}!
   {
-    \if_meaning:w 0 #2
+    \if_meaning:w 0 #1
       \exp_after:wN \@@_tmul_tp_pp:w
     \else:
       \exp_after:wN \@@_tmul_tp_tp:w
     \fi:
-    #1 . #2
+    0 . #1
   }
-\cs_new:Npn \@@_tmul_tp_tp:w #1 . 1 #2 ; #3 . 0 #4
+\cs_new:Npn \@@_tmul_tp_tp:w 0 . 1 #1 ; 0 . 0 #2
   {
     \exp_after:wN \@@_tmul_tp_tp_wrap:w
     \@@_int_value:w
-      \@@_tadd_open:w + #1.#2 + #3.#4 .
+      \@@_tadd_open:w + 0 . #1 + 0 . #2 .
   }
-\cs_new:Npn \@@_tmul_tp_tp_wrap:w #1 . #2 + % #3 ;
-  { #1 . 1 0 {#2} } % {#3} ;
-\cs_new:Npn \@@_tmul_tp_pp:w #1 . 0 #2 #3 ; #4 . 0 #5 % #6 ;
+\cs_new:Npn \@@_tmul_tp_tp_wrap:w 0 . #1 + % #2 ;
+  { 0 . 1 0 {#1} } % {#2} ;
+\cs_new:Npn \@@_tmul_tp_pp:w 0 . 0 #1 #2 ; 0 . 0 #3 % #4 ;
   {
     \exp_after:wN \@@_tmul_tp_pp_wrap:w
     \@@_int_value:w
-      \@@_topen:w + #1 . #2 +
-      \@@_tadd_open:w + 0.#3 + #4.#5 . % {#6} ;
+      \@@_topen:w     + 0 . #1 +
+      \@@_tadd_open:w + 0 . #2 + 0 . #3 . % {#4} ;
   }
-\cs_new:Npn \@@_tmul_tp_pp_wrap:w #1 . #2 + #3 + #4 ;
-  { #1 . 0 { 1 #2 } { 0 {#3} {#4} } ; }
+\cs_new:Npn \@@_tmul_tp_pp_wrap:w 0 . #1 + #2 + #3 ;
+  { 0 . 0 { 1 #1 } { 0 {#2} {#3} } ; }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2170,14 +2166,14 @@
   }
 \cs_new:Npn \@@_tmul_pp_p_wrap:w 0 . #1 + #2 + #3 + #4 ;
   { 0 . 0 { 0 {#1} {#2} } { 0 {#3} {#4} } ; }
-\cs_new:Npn \@@_tmul_pp_t:w #1 . 0 #2 #3 ; #4 . 0 #5 #6 ; #7 . 1 #8 ;
+\cs_new:Npn \@@_tmul_pp_t:w #1 . 0 #2 #3 ; 0 . 0 #4 #5 ; 0 . 1 #6 ;
   {
     \exp_after:wN \@@_tmul_pp_t_wrap:w
     \@@_int_value:w
-      \@@_tadd_open:w + #7 . #8 + #1 . #2 +
-      \@@_tadd_open:w +  0 . #3 + #4 . #5 . #6 ;
+      \@@_tadd_open:w + 0 . #6 + #1 . #2 +
+      \@@_tadd_open:w + 0 . #3 +  0 . #4 . #5 ;
   }
-\cs_new:Npn \@@_tmul_pp_t_wrap:w #1 . #2 + #3 + #4 ;
+\cs_new:Npn \@@_tmul_pp_t_wrap:w #1 . #2 + #3 + #4 ; % ^^A todo: can #1 be non-zero???
   { #1 . 0 { 1 #2 } { 0 {#3} {#4} } ; }
 %    \end{macrocode}
 % \end{macro}
@@ -2190,6 +2186,7 @@
 %    \begin{macrocode}
 \cs_new:cpn { @@_/_o:ww } \s_@@ \@@_chk:w #1.#2#3 ; \s_@@ \@@_chk:w #4.#5
   {
+    \BOOM\BOOM\prg_replicate:nn{\c_max_int}{\BOOM}
     \if_meaning:w 0 #4 \BOOM \exp_after:wN \@@_return_ii_o:w \fi:
     \if_meaning:w 0 #1 \exp_after:wN \@@_return_i_o:w \fi:
     \@@_div_aux_o:ww
